--- a/node/ch6/lab3-dotenv/.env
+++ b/node/ch6/lab3-dotenv/.env
@@ -1,3 +1,7 @@
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=1234
+
+
+# 환경 변수는 애플리케이션에서 사용되는 설정 값들을 외부에서 변경하거나 제어하기 위한 방법 중 하나입니다. .env 파일은 키-값 쌍으로 이루어져 있으며, 각 줄은 하나의 환경 변수를 나타냅니다.
+# .env 파일은 주로 민감한 정보(예: 데이터베이스 연결 문자열, API 키 등)를 안전하게 저장하고 애플리케이션의 설정을 관리하기 위해 사용됩니다.
